--- a/index.html
+++ b/index.html
@@ -10,3 +10,6 @@
     <h1>ola mundo</h1>
 </body>
 </html>
+<p>background-color: #85FFBD;
+    background-image: linear-gradient(90deg, #85FFBD 0%, #FFFB7D 100%);
+    </p>>
