--- a/index.html
+++ b/index.html
@@ -10,6 +10,5 @@
     <h1>ola mundo</h1>
 </body>
 </html>
-<p>background-color: #85FFBD;
-    background-image: linear-gradient(90deg, #85FFBD 0%, #FFFB7D 100%);
+<p>Localizada no coração da cidade a Barbearia Alura traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.   
     </p>>
