--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Convêniencia Bebeu Todas</title>
 </head>
 <body>
-<img src="https://1nem.vercel.app/img/banner-home.jpg" alt="banner-topo">
+<img src="https://1nem.vercel.app/img/banner-home.jpg" alt="banner-home">
 
     <h1>conveniência colégio</h1>
 </body>
