--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Convêniencia Bebeu Todas</title>
 </head>
 <body>
+
+    <header>
+        <ul>
+            <li>home</li>
+            <li>produtos</li>
+            <li>serviços</li>
+            <li>contatos</li>
+        </ul>
+    </header>
 <img id="banner" src="https://1nem.vercel.app/img/banner-home.jpg" alt="banner-home">
 
     <h1>conveniência colégio</h1>
