--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 
     <header>
         <ul>
-            <li>home</li>
-            <li>produtos</li>
-            <li>serviços</li>
-            <li>contatos</li>
+            <li><a href="index.html">home</a></li>
+            <li><a href="produtos.html">produtos</a></li>
+            <li><a href="servicos.html">serviços</a></li>
+            <li><a href="contatos">contatos</a></li>
         </ul>
     </header>
+
 <img id="banner" src="https://1nem.vercel.app/img/banner-home.jpg" alt="banner-home">
 
     <h1>conveniência colégio</h1>
