--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 <body>
 
     <header>
+       <nav>
         <ul>
             <li><a href="index.html">home</a></li>
             <li><a href="produtos.html">produtos</a></li>
             <li><a href="servicos.html">serviços</a></li>
             <li><a href="contatos">contatos</a></li>
         </ul>
+       </nav>
     </header>
 
 <img id="banner" src="https://1nem.vercel.app/img/banner-home.jpg" alt="banner-home">
